# homegear-gateway

./: .gitignore  CMakeLists.txt  LICENSE  README.md  configure.ac  makeRelease.sh
debian/: changelog  control  copyright  postinst  postrm  preinst  prerm  rules  source.lintian-overrides
misc/Config Directory/: gateway.conf
misc/System Config/: homegear-gateway.init  homegear-gateway.service  logrotate
src/: GD.cpp  GD.h  Gd.cpp  Gd.h  Makefile.am  RpcServer.cpp  RpcServer.h  Settings.cpp  Settings.h  UPnP.cpp  UPnP.h  homegear-gateway  main.cpp
src/Families/: Cc110LTest.cpp  Cc110LTest.h  EnOcean.cpp  EnOcean.h  HomeMaticCc1101.cpp  HomeMaticCc1101.h  HomeMaticCoc.cpp  HomeMaticCoc.h  HomeMaticCulfw.cpp  HomeMaticCulfw.h  ICommunicationInterface.cpp  ICommunicationInterface.h  MaxCc1101.cpp  MaxCc1101.h  MaxCulfw.cpp  MaxCulfw.h  ZWave.cpp  ZWave.h  Zigbee.cpp  Zigbee.h
src/GD/: GD.cpp  GD.h
